--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-torch @ https://download.pytorch.org/whl/cpu/torch-1.6.0%2Bcpu-cp36-cp36m-linux_x86_64.whl
+torch
 backports.csv==1.0.7
 beautifulsoup4==4.9.3
 certifi==2020.12.5
