--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ cheroot==8.5.2
 CherryPy==18.6.0
 click==7.1.2
 cryptography==3.4.6
-dataclasses==0.8
+dataclasses
 feedparser==6.0.2
 filelock==3.0.12
 Flask==1.1.2
